--- a/pdfs.html
+++ b/pdfs.html
@@ -11,5 +11,5 @@
     <br>
     <br>
     <br>
-    Algebraic and Calculus Premliminaries, and Section 1.1/1.2
-</body>
+    Algebraic and Calculus Premliminaries, and Section 1.1/1.2 
+      <embed src="https://amanda137.github.io/Differential_Equations_Tutoring_Assignments.pdf" type="application/pdf" />
