--- a/pdfs.html
+++ b/pdfs.html
@@ -4,14 +4,12 @@
       <title>Differential Equations</title>
     </head>
   <body>
-    <h1 style="text-align:center;">Differential Equations Pdfs</h1>
+    <h1 style="text-align:center;">Differential Equations</h1>
     <br>
-    <br>
-    <h3 style="text-align:center;">See below</h3>
     <br>
     <br>
     <br>
     Algebraic and Calculus Premliminaries, and Section 1.1/1.2 
-        <embed src="https://amanda137.github.io/Differential_Equations_Tutoring_Assignments.pdf" type="application/pdf" />
+        <a href=http://Differential_Equations_Tutoring_Assignments.pdf>
   </body>
   </html>
