--- a/pdfs.html
+++ b/pdfs.html
@@ -10,6 +10,6 @@
     <br>
     <br>
     Algebraic and Calculus Premliminaries, and Section 1.1/1.2 
-        <a href=http://Differential_Equations_Tutoring_Assignments.pdf>
+        <a href=https://amanda137.github.io/Differential-Equations/Differential_Equations_Tutoring_Assignments.pdf>
   </body>
   </html>
