--- a/pdfs.html
+++ b/pdfs.html
@@ -9,7 +9,7 @@
     <br>
     <br>
     <br> 
-      <a href=https://amanda137.github.io/Differential-Equations/Differential_Equations_Tutoring_Assignments.pdf>
+      <a href="https://amanda137.github.io/Differential-Equations/Differential_Equations_Tutoring_Assignments.pdf">
         Algebraic and Calculus Premliminaries, and Section 1.1/1.2 
       </a>
   </body>
