--- a/pdfs.html
+++ b/pdfs.html
@@ -12,5 +12,11 @@
       <a href="https://amanda137.github.io/Differential-Equations/Differential_Equations_Tutoring_Assignments.pdf">
         Algebraic and Calculus Premliminaries, and Section 1.1/1.2 
       </a>
+      <a href="https://amanda137.github.io/Differential-Equations/Section 2.1,2.2.pdf">
+        Sections 2.1 and 2.2 on Integrating Factor and Separable Equations.
+      </a>
+      <a href="https://amanda137.github.io/Differential-Equations/Section 2.3.pdf">
+        Sections 2.3 on Growth and Decay Phenomena
+      </a>
   </body>
   </html>
