--- a/pdfs.html
+++ b/pdfs.html
@@ -3,7 +3,7 @@
     <head>
       <title>Differential Equations</title>
     </head>
-  <body>
+  <body style="background-color:forest green;">
     <h1 style="text-align:center;">Differential Equations</h1>
     <br>
     <br>
