--- a/pdfs.html
+++ b/pdfs.html
@@ -2,13 +2,25 @@
   <html>
     <head>
       <title>Differential Equations</title>
+      <style>
+        div.text { 
+          background-color: rgba(255, 255, 255, 0.8);
+          padding: 20px 20px 20px 20px;
+        }
+        div.title {
+          padding: 20px 20px 20px 20px
+        }
+      </style>
     </head>
   <body style="background-color:forest green;">
-    <h1 style="text-align:center;">Differential Equations</h1>
+   <div class="title">
+    <h1 style="text-align:center;text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue; color: white ">Differential Equations</h1>
+   </div>
     <br>
     <br>
     <br>
     <br> 
+   <div class="text">
       <a href="https://amanda137.github.io/Differential-Equations/Differential_Equations_Tutoring_Assignments.pdf">
         Algebraic and Calculus Premliminaries, and Section 1.1/1.2 
       </a>
@@ -18,5 +30,6 @@
       <a href="https://amanda137.github.io/Differential-Equations/Section 2.3.pdf">
         Sections 2.3 on Growth and Decay Phenomena
       </a>
+   </div>
   </body>
   </html>
