--- a/pdfs.html
+++ b/pdfs.html
@@ -12,7 +12,7 @@
         }
       </style>
     </head>
-  <body style="background-color:"forest green";">
+  <body style="background-color:forestgreen;">
    <div class="title">
     <h1 style="text-align:center;text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue; color: white ">Differential Equations</h1>
    </div>
@@ -37,3 +37,5 @@
    </div>
   </body>
   </html>
+
+
