--- a/pdfs.html
+++ b/pdfs.html
@@ -22,7 +22,7 @@
     <br> 
    <div class="text">
       <a href="https://amanda137.github.io/Differential-Equations/Differential_Equations_Tutoring_Assignments.pdf">
-        Algebraic and Calculus Premliminaries, and Section 1.1/1.2 
+        Algebraic and Calculus Premliminaries
       </a>
       <br>
       <br>
@@ -37,5 +37,5 @@
    </div>
   </body>
   </html>
-
+Section 1.1, 1.2 on Classifying ODE's and Verifying Solutions.
 
