--- a/pdfs.html
+++ b/pdfs.html
@@ -21,8 +21,13 @@
     <br>
     <br> 
    <div class="text">
-      <a href="https://amanda137.github.io/Differential-Equations/Differential_Equations_Tutoring_Assignments.pdf">
-        Algebraic and Calculus Premliminaries
+      <a href="https://amanda137.github.io/Preliminaries.pdf">
+        Algebraic and Calculus Premliminaries.
+      </a>
+      <br>
+      <br>
+      <a href="https://amanda137.github.io/Differential-Equations/Section 1.1,1.2.pdf">
+        Sections 1.1 and 1.2 on Classifying ODE's and Verifying Solutions.
       </a>
       <br>
       <br>
@@ -37,5 +42,5 @@
    </div>
   </body>
   </html>
-Section 1.1, 1.2 on Classifying ODE's and Verifying Solutions.
+
 
