--- a/pdfs.html
+++ b/pdfs.html
@@ -39,6 +39,13 @@
       <a href="https://amanda137.github.io/Differential-Equations/Section 2.3.pdf">
         Sections 2.3 on Growth and Decay Phenomena
       </a>
+      <br>
+      <br>
+      <a href="https://amanda137.github.io/Differential-Equations/Section 2.3 Answers.pdf">
+        Sections 2.3 on Growth and Decay Phenomena Answers
+      </a>
+      <br>
+      <br>
    </div>
   </body>
   </html>
