--- a/pdfs.html
+++ b/pdfs.html
@@ -21,7 +21,7 @@
     <br>
     <br> 
    <div class="text">
-      <a href="https://amanda137.github.io/Preliminaries.pdf">
+      <a href="https://amanda137.github.io/Differential-Equations/Preliminaries.pdf">
         Algebraic and Calculus Premliminaries.
       </a>
       <br>
