--- a/pdfs.html
+++ b/pdfs.html
@@ -42,6 +42,11 @@
       <br>
       <br>
       <a href="https://amanda137.github.io/Differential-Equations/Section 2.3 Answers.pdf">
+        Sections 2.7 on Direction Fields and Eulers Method (Quiz 4 Preparation)
+      </a>
+      <br>
+      <br>
+      <a href="https://amanda137.github.io/Differential-Equations/Section 2.7.pdf">
         Sections 2.3 on Growth and Decay Phenomena Answers
       </a>
       <br>
