--- a/pdfs.html
+++ b/pdfs.html
@@ -51,6 +51,11 @@
       </a>
       <br>
       <br>
+      <a href="https://amanda137.github.io/Differential-Equations/Section 2.7 Answers.pdf">
+        Sections 2.7 on Direction Fields and Eulers Method (Quiz 4 Preparation) Answers
+      </a>
+      <br>
+      <br>
    </div>
   </body>
   </html>
