--- a/pdfs.html
+++ b/pdfs.html
@@ -56,6 +56,11 @@
       </a>
       <br>
       <br>
+      <a href="https://amanda137.github.io/Differential-Equations/Exam 2 Practice.pdf">
+        Sections 2.1, 2.2, 2.3, 2.5, 2.7, 3.1 (Exam 2 Preparation)
+      </a>
+      <br>
+      <br>     
    </div>
   </body>
   </html>
